// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp /> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <div
    className="container"
  >
    <AddCategory
      setCategorie={[Function]}
    />
    <ChangeView
      origen={false}
      setOrigen={[Function]}
    />
    <br />
  </div>
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
      origen={false}
    />
    <GifGrid
      category="Samurai X"
      key="Samurai X"
      origen={false}
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
      origen={false}
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en <GifExpertApp /> Debe de mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <div
    className="container"
  >
    <AddCategory
      setCategorie={[Function]}
    />
    <ChangeView
      origen={false}
      setOrigen={[Function]}
    />
    <br />
  </div>
  <ol />
</Fragment>
`;
